cmake_minimum_required(VERSION 3.6)
project(Ass3)

set(CMAKE_CXX_STANDARD 11)

include_directories(Client/include)

add_executable(Ass3
        Client/include/connectionHandler.h
        Client/include/keyThread.h
        Client/include/MessageEncoderDecoder.h
        Client/include/Packet.h
        Client/include/socketListener.h
        Client/include/Task.h
        Client/src/connectionHandler.cpp
        Client/src/keyThread.cpp
        Client/src/MainClass.cpp
        Client/src/MessageEncoderDecoder.cpp
        Client/src/Packet.cpp
        Client/src/socketListener.cpp
        Server/.settings/org.eclipse.core.resources.prefs
        Server/.settings/org.eclipse.jdt.core.prefs
        Server/.settings/org.eclipse.m2e.core.prefs
        Server/Files/AlbumArtSmall.jpg
        Server/Files/Folder.jpg
        Server/src/main/java/bgu/spl171/net/api/bidi/packets/ACK.java
        Server/src/main/java/bgu/spl171/net/api/bidi/packets/BCAST.java
        Server/src/main/java/bgu/spl171/net/api/bidi/packets/DATA.java
        Server/src/main/java/bgu/spl171/net/api/bidi/packets/DELRQ.java
        Server/src/main/java/bgu/spl171/net/api/bidi/packets/DIRQ.java
        Server/src/main/java/bgu/spl171/net/api/bidi/packets/DISC.java
        Server/src/main/java/bgu/spl171/net/api/bidi/packets/ERROR.java
        Server/src/main/java/bgu/spl171/net/api/bidi/packets/LOGRQ.java
        Server/src/main/java/bgu/spl171/net/api/bidi/packets/Packet.java
        Server/src/main/java/bgu/spl171/net/api/bidi/packets/RRQ.java
        Server/src/main/java/bgu/spl171/net/api/bidi/packets/WRQ.java
        Server/src/main/java/bgu/spl171/net/api/bidi/BidiEncDecImpl.java
        Server/src/main/java/bgu/spl171/net/api/bidi/BidiImpl.java
        Server/src/main/java/bgu/spl171/net/api/bidi/BidiMessagingProtocol.java
        Server/src/main/java/bgu/spl171/net/api/bidi/Connections.java
        Server/src/main/java/bgu/spl171/net/api/bidi/ConnectionsImpl.java
        Server/src/main/java/bgu/spl171/net/api/MessageEncoderDecoder.java
        Server/src/main/java/bgu/spl171/net/api/MessagingProtocol.java
        Server/src/main/java/bgu/spl171/net/impl/TFTPreactor/ReactorMain.java
        Server/src/main/java/bgu/spl171/net/impl/TFTPtpc/TPCMain.java
        Server/src/main/java/bgu/spl171/net/srv/bidi/ConnectionHandler.java
        Server/src/main/java/bgu/spl171/net/srv/ActorThreadPool.java
        Server/src/main/java/bgu/spl171/net/srv/BaseServer.java
        Server/src/main/java/bgu/spl171/net/srv/BlockingConnectionHandler.java
        Server/src/main/java/bgu/spl171/net/srv/ConnectionHandler.java
        Server/src/main/java/bgu/spl171/net/srv/NonBlockingConnectionHandler.java
        Server/src/main/java/bgu/spl171/net/srv/Reactor.java
        Server/src/main/java/bgu/spl171/net/srv/Server.java
        Server/src/main/main.iml
        Server/target/classes/bgu/spl171/net/api/bidi/packets/ACK.class
        Server/target/classes/bgu/spl171/net/api/bidi/packets/BCAST.class
        Server/target/classes/bgu/spl171/net/api/bidi/packets/DATA.class
        Server/target/classes/bgu/spl171/net/api/bidi/packets/DELRQ.class
        Server/target/classes/bgu/spl171/net/api/bidi/packets/DIRQ.class
        Server/target/classes/bgu/spl171/net/api/bidi/packets/DISC.class
        Server/target/classes/bgu/spl171/net/api/bidi/packets/ERROR.class
        Server/target/classes/bgu/spl171/net/api/bidi/packets/LOGRQ.class
        Server/target/classes/bgu/spl171/net/api/bidi/packets/Packet.class
        Server/target/classes/bgu/spl171/net/api/bidi/packets/RRQ.class
        Server/target/classes/bgu/spl171/net/api/bidi/packets/WRQ.class
        Server/target/classes/bgu/spl171/net/api/bidi/BidiEncDecImpl.class
        Server/target/classes/bgu/spl171/net/api/bidi/BidiImpl.class
        Server/target/classes/bgu/spl171/net/api/bidi/BidiMessagingProtocol.class
        Server/target/classes/bgu/spl171/net/api/bidi/Connections.class
        Server/target/classes/bgu/spl171/net/api/bidi/ConnectionsImpl.class
        Server/target/classes/bgu/spl171/net/api/MessageEncoderDecoder.class
        Server/target/classes/bgu/spl171/net/api/MessagingProtocol.class
        Server/target/classes/bgu/spl171/net/impl/TFTPreactor/ReactorMain.class
        Server/target/classes/bgu/spl171/net/impl/TFTPtpc/TPCMain.class
        Server/target/classes/bgu/spl171/net/srv/bidi/ConnectionHandler.class
        Server/target/classes/bgu/spl171/net/srv/ActorThreadPool.class
        Server/target/classes/bgu/spl171/net/srv/BaseServer.class
        Server/target/classes/bgu/spl171/net/srv/BlockingConnectionHandler.class
        Server/target/classes/bgu/spl171/net/srv/ConnectionHandler.class
        Server/target/classes/bgu/spl171/net/srv/NonBlockingConnectionHandler.class
        Server/target/classes/bgu/spl171/net/srv/Reactor.class
        Server/target/classes/bgu/spl171/net/srv/Server\$1.class
        Server/target/classes/bgu/spl171/net/srv/Server.class
        Server/.classpath
        Server/.project
        Server/pom.xml)
