cmake_minimum_required(VERSION 3.6)
project(Server C)

set(CMAKE_C_STANDARD 11)

add_executable(Server
        .settings/org.eclipse.core.resources.prefs
        .settings/org.eclipse.jdt.core.prefs
        .settings/org.eclipse.m2e.core.prefs
        Files/AlbumArtSmall.jpg
        Files/Folder.jpg
        src/main/java/bgu/spl171/net/api/bidi/packets/ACK.java
        src/main/java/bgu/spl171/net/api/bidi/packets/BCAST.java
        src/main/java/bgu/spl171/net/api/bidi/packets/DATA.java
        src/main/java/bgu/spl171/net/api/bidi/packets/DELRQ.java
        src/main/java/bgu/spl171/net/api/bidi/packets/DIRQ.java
        src/main/java/bgu/spl171/net/api/bidi/packets/DISC.java
        src/main/java/bgu/spl171/net/api/bidi/packets/ERROR.java
        src/main/java/bgu/spl171/net/api/bidi/packets/LOGRQ.java
        src/main/java/bgu/spl171/net/api/bidi/packets/Packet.java
        src/main/java/bgu/spl171/net/api/bidi/packets/RRQ.java
        src/main/java/bgu/spl171/net/api/bidi/packets/WRQ.java
        src/main/java/bgu/spl171/net/api/bidi/BidiEncDecImpl.java
        src/main/java/bgu/spl171/net/api/bidi/BidiImpl.java
        src/main/java/bgu/spl171/net/api/bidi/BidiMessagingProtocol.java
        src/main/java/bgu/spl171/net/api/bidi/Connections.java
        src/main/java/bgu/spl171/net/api/bidi/ConnectionsImpl.java
        src/main/java/bgu/spl171/net/api/MessageEncoderDecoder.java
        src/main/java/bgu/spl171/net/api/MessagingProtocol.java
        src/main/java/bgu/spl171/net/impl/TFTPreactor/ReactorMain.java
        src/main/java/bgu/spl171/net/impl/TFTPtpc/TPCMain.java
        src/main/java/bgu/spl171/net/srv/bidi/ConnectionHandler.java
        src/main/java/bgu/spl171/net/srv/ActorThreadPool.java
        src/main/java/bgu/spl171/net/srv/BaseServer.java
        src/main/java/bgu/spl171/net/srv/BlockingConnectionHandler.java
        src/main/java/bgu/spl171/net/srv/ConnectionHandler.java
        src/main/java/bgu/spl171/net/srv/NonBlockingConnectionHandler.java
        src/main/java/bgu/spl171/net/srv/Reactor.java
        src/main/java/bgu/spl171/net/srv/Server.java
        src/main/main.iml
        target/classes/bgu/spl171/net/api/bidi/packets/ACK.class
        target/classes/bgu/spl171/net/api/bidi/packets/BCAST.class
        target/classes/bgu/spl171/net/api/bidi/packets/DATA.class
        target/classes/bgu/spl171/net/api/bidi/packets/DELRQ.class
        target/classes/bgu/spl171/net/api/bidi/packets/DIRQ.class
        target/classes/bgu/spl171/net/api/bidi/packets/DISC.class
        target/classes/bgu/spl171/net/api/bidi/packets/ERROR.class
        target/classes/bgu/spl171/net/api/bidi/packets/LOGRQ.class
        target/classes/bgu/spl171/net/api/bidi/packets/Packet.class
        target/classes/bgu/spl171/net/api/bidi/packets/RRQ.class
        target/classes/bgu/spl171/net/api/bidi/packets/WRQ.class
        target/classes/bgu/spl171/net/api/bidi/BidiEncDecImpl.class
        target/classes/bgu/spl171/net/api/bidi/BidiImpl.class
        target/classes/bgu/spl171/net/api/bidi/BidiMessagingProtocol.class
        target/classes/bgu/spl171/net/api/bidi/Connections.class
        target/classes/bgu/spl171/net/api/bidi/ConnectionsImpl.class
        target/classes/bgu/spl171/net/api/MessageEncoderDecoder.class
        target/classes/bgu/spl171/net/api/MessagingProtocol.class
        target/classes/bgu/spl171/net/impl/TFTPreactor/ReactorMain.class
        target/classes/bgu/spl171/net/impl/TFTPtpc/TPCMain.class
        target/classes/bgu/spl171/net/srv/bidi/ConnectionHandler.class
        target/classes/bgu/spl171/net/srv/ActorThreadPool.class
        target/classes/bgu/spl171/net/srv/BaseServer.class
        target/classes/bgu/spl171/net/srv/BlockingConnectionHandler.class
        target/classes/bgu/spl171/net/srv/ConnectionHandler.class
        target/classes/bgu/spl171/net/srv/NonBlockingConnectionHandler.class
        target/classes/bgu/spl171/net/srv/Reactor.class
        target/classes/bgu/spl171/net/srv/Server\$1.class
        target/classes/bgu/spl171/net/srv/Server.class
        .classpath
        .project
        pom.xml)
